[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/background.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/button_click.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/alkhemikal32px.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sprites/ui/triple_sign.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/sound_on.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/music_on.png" type="Texture" id=7]
[ext_resource path="res://menu/volume_controls.gd" type="Script" id=8]
[ext_resource path="res://assets/styles/default_theme.tres" type="Theme" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("TripleSign:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, -150 ), Vector2( 180, 162 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TripleSign:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 180, -150 ) ]
}

[node name="MainMenu" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 180, 320 )
texture = ExtResource( 2 )

[node name="TripleSign" type="Sprite" parent="."]
position = Vector2( 180, -150 )
texture = ExtResource( 5 )

[node name="SinglePlayer" type="Button" parent="TripleSign"]
margin_left = -58.0
margin_top = -104.0
margin_right = 58.0
margin_bottom = -63.0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 4 )
text = "Solo"

[node name="Versus" type="Button" parent="TripleSign"]
margin_left = -58.0
margin_top = -3.0
margin_right = 58.0
margin_bottom = 38.0
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 4 )
text = "Versus"

[node name="VolumeControls" type="Control" parent="TripleSign"]
margin_left = -54.0
margin_top = 103.0
margin_right = -14.0
margin_bottom = 143.0
script = ExtResource( 8 )

[node name="MuteSound" type="TextureButton" parent="TripleSign/VolumeControls"]
margin_left = -1.0
margin_top = -2.0
margin_right = 15.0
margin_bottom = 14.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )

[node name="SoundVolumeSlider" type="HSlider" parent="TripleSign/VolumeControls"]
margin_left = 18.0
margin_top = -4.0
margin_right = 102.0
margin_bottom = 19.0
theme = ExtResource( 9 )
min_value = -30.0
max_value = 0.0
step = 5.0

[node name="MuteMusic" type="TextureButton" parent="TripleSign/VolumeControls"]
margin_left = -1.0
margin_top = 23.0
margin_right = 15.0
margin_bottom = 39.0
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )

[node name="MusicVolumeSlider" type="HSlider" parent="TripleSign/VolumeControls"]
margin_left = 18.0
margin_top = 21.0
margin_right = 102.0
margin_bottom = 44.0
theme = ExtResource( 9 )
min_value = -30.0
max_value = 0.0
step = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ButtonClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="pressed" from="TripleSign/SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="TripleSign/Versus" to="." method="_on_Versus_pressed"]
[connection signal="toggled" from="TripleSign/VolumeControls/MuteSound" to="TripleSign/VolumeControls" method="_on_MuteSound_toggled"]
[connection signal="value_changed" from="TripleSign/VolumeControls/SoundVolumeSlider" to="TripleSign/VolumeControls" method="_on_SoundVolumeSlider_value_changed"]
[connection signal="toggled" from="TripleSign/VolumeControls/MuteMusic" to="TripleSign/VolumeControls" method="_on_MuteMusic_toggled"]
[connection signal="value_changed" from="TripleSign/VolumeControls/MusicVolumeSlider" to="TripleSign/VolumeControls" method="_on_MusicVolumeSlider_value_changed"]
